<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorSecondaryDark"
    android:layout_margin="20sp"
    android:padding="10sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/title_goal_popup"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:inputType="textMultiLine"
        android:maxLength="250"
        android:importantForAutofill="no"
        android:layout_marginVertical="5sp"
        tools:ignore="LabelFor"
        android:textSize="16sp"
        android:hint="@string/placeholder_goal"
        android:textAlignment="center"
        android:background="@drawable/background_text_area"
        android:id="@+id/goal_popup_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:text="@string/confirm"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_button"
        android:layout_marginTop="10sp"
        android:id="@+id/goal_popup_confirm"/>

</LinearLayout>