<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorSecondaryDark"
    android:layout_margin="20sp"
    android:padding="10sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:text="@string/title_delete_popup"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/confirm"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button"
            android:id="@+id/delete_popup_confirm"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/cancel"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_button"
            android:id="@+id/delete_popup_cancel"/>
    </LinearLayout>

</LinearLayout>
