<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <RelativeLayout
        android:id="@+id/home_current_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@color/colorSecondaryDark"
        android:paddingHorizontal="10sp"
        android:paddingVertical="5sp">

        <ImageView
            android:id="@+id/home_current_edit"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_below="@id/home_current_goal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp" />

        <TextView
            android:id="@+id/home_current_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/placeholder_tasks"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/home_current_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_current_date"
            android:layout_marginHorizontal="5sp"
            android:text="@string/dayDatePlaceholder"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/home_current_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_current_day"
            android:ellipsize="end"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:maxHeight="75sp"
            android:maxLines="5"
            android:text="@string/no_tasks_set"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/home_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datePlaceholder"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/home_current_today"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="2dp"
        tools:listitem="@layout/recyclerview_home_item" />

</RelativeLayout>