<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTertiaryDark"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:background="@color/colorPrimaryDark"
                app:maxButtonHeight="25sp">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="?android:attr/actionBarSize"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="20sp" />

            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@color/colorSecondaryDark"
                android:paddingHorizontal="7sp"
                android:paddingVertical="2sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/dayDatePlaceholder"
                    android:id="@+id/main_date_day" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/datePlaceholder"
                    tools:ignore="RelativeOverlap"
                    android:id="@+id/main_date"/>

            </RelativeLayout>

            <fragment
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:defaultNavHost="true"
                app:navGraph="@navigation/nav_graph"
                tools:ignore="FragmentTagUsage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_view"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/drawer_home_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50sp"
                android:drawableTop="@drawable/ic_home"
                android:text="@string/home"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/drawer_today_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50sp"
                android:drawableTop="@drawable/ic_today"
                android:text="@string/today"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
